--- a/LMS-Lexicon/Views/Teacher/Index.cshtml
+++ b/LMS-Lexicon/Views/Teacher/Index.cshtml
@@ -107,9 +107,9 @@
                         @Html.DisplayFor(modelItem => item.CourseName)
                     </td>
                     <td>
-                        <a asp-action="EditStudent" asp-route-id="@item.Id">Ändra</a> |
-                        <a asp-action="DetailsStudent" asp-route-id="@item.Id">Detaljer</a> |
-                        <a asp-action="DeleteStudent" asp-route-id="@item.Id">Ta bort</a>
+                        <a asp-action="EditStudent" asp-route-id="@item.Id" class="btn  btn-dark">Ändra</a> |
+                        <a asp-action="DetailsStudent" asp-route-id="@item.Id" class="btn btn-dark">Detaljer</a> |
+                        <a asp-action="DeleteStudent" asp-route-id="@item.Id" class="btn btn-danger">Ta bort</a>
                     </td>
                 </tr>
             }
