--- a/LMS-Lexicon/Views/Courses/Index.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Courses";
 }
 
-<h1>Courses</h1>
+<h1>Kurser</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Lägg till kurse+</a>
+    <a asp-action="Create" class="btn btn-success">Lägg till kurs+</a>
     @*<a class="btn btn-success text-white popup" data-url="Teacher/CreateStudent" data-toggle="modal" data-target="#modal-create-user" id="UserModel">Lägg till kurs <i class="fa fa-plus"></i></a>*@
 </p>
 
