--- a/LMS-Lexicon/Views/Modules/Create.cshtml
+++ b/LMS-Lexicon/Views/Modules/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Skapa";
 }
 
-<h1>Läg till Modules</h1>
+<h1>Lägg till Modul</h1>
 
-<h4>Modules</h4>
+@*<h4>Modules</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,7 +19,8 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StartDate" class="control-label"></label>
+                @*<label asp-for="StartDate" class="control-label"></label>*@
+                <h4>Namn</h4>
                 <input asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
@@ -34,14 +35,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Lägg till" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">tillbaka till kursen</a>
 </div>
 
 @section Scripts {
