--- a/LMS-Lexicon/Views/Modules/Create.cshtml
+++ b/LMS-Lexicon/Views/Modules/Create.cshtml
@@ -12,15 +12,15 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CourseId"/>
+            <input type="hidden" asp-for="CourseId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                @*<label asp-for="StartDate" class="control-label"></label>*@
-                <h4>Namn</h4>
+                <label asp-for="StartDate" class="control-label"></label>
+                @*<h4>Namn</h4>*@
                 <input asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
@@ -42,9 +42,12 @@
 </div>
 
 <div>
-    <a asp-action="Index">tillbaka till kursen</a>
+    
+    <a asp-action="/Courses/Index">tillbaka till kursen</a>
+
 </div>
 
+<
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
