--- a/LMS-Lexicon/Views/Modules/Create.cshtml
+++ b/LMS-Lexicon/Views/Modules/Create.cshtml
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">tillbaka till kursen</a>
+    <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId">tillbaka till kursen</a>
 </div>
 
 @section Scripts {
