Validation and close problem

--- a/LMS-Lexicon/Views/Teacher/DetailsStudent.cshtml
+++ b/LMS-Lexicon/Views/Teacher/DetailsStudent.cshtml
@@ -49,7 +49,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="EditStudent" asp-route-id="@Model.Id">Ändra</a> |
-    <a asp-action="DeleteStudent" asp-route-id="@Model.Id">Ta bort</a> |
-    <a asp-action="Index">Tillbaka till listan</a>
+    <a asp-action="EditStudent" asp-route-id="@Model.Id"><i class="fas fa-edit"></i></a> |
+    <a asp-action="DeleteStudent" asp-route-id="@Model.Id"><i class="fas fa-trash-alt"></i></a> |
+    <a asp-action="Index"><i class="fas fa-list-alt"></i></a>
 </div>
