--- a/LMS-Lexicon/Views/Shared/_LoginPartial.cshtml
+++ b/LMS-Lexicon/Views/Shared/_LoginPartial.cshtml
@@ -5,28 +5,30 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-        </li>
-        <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+        <li class="nav-item py-md-5">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Student", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-dark float-right">Logga ut</button>
             </form>
         </li>
+        <li class="nav-item py-md-5">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
+        </li>
+
     }
     else
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <li class="nav-item py-md-2">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Registrera</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <li class="nav-item py-md-2">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Logga in</a>
         </li>
     }
+
     @{
-        var currentrole = User.IsInRole("Student") ? "Student" : User.IsInRole("Teacher") ? "Teacher" : "-";
-        <li class="font-weight-bold pt-2">
+        var currentrole = User.IsInRole("Student") ? "Student" : User.IsInRole("Teacher") ? "Teacher" : "";
+        <li class="nav-item py-md-5 font-weight-bold py-md-4">
             @currentrole
         </li>
-            }
-    </ul>
+    }
+</ul>
