--- a/LMS-Lexicon/Views/Teacher/CreateStudentPartial.cshtml
+++ b/LMS-Lexicon/Views/Teacher/CreateStudentPartial.cshtml
@@ -1,123 +1,79 @@
-﻿@model CreateStudentViewModel;
+﻿@model CreateStudentViewModel
 @inject ICourseSelectService courseSelect
     <!--Modal-->
-<div class="modal-content">
+<div class="modal fade" aria-labelledby="modal-create-user-label" role="dialog" tabindex="-1" id="modal-create-user" aria-hidden="true">
+    <div class="modal-dialog">
 
-    <!--Modal Header Start-->
-    <div class="modal-header">
-        <h4 class="modal-title">Lägg till Student</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-    </div>
-    <!--Modal Header End-->
-    @Html.AntiForgeryToken()
-    <div id="CreateStudent">
-        <form asp-action="CreateStudent"
-              asp-controller="Teacher"
-              data-ajax="true"
-              data-ajax-method="post"
-              data-ajax-success="fixvalidation"
-              data-ajax-failure="failcreate"
-              data-ajax-update="studentFormCreate"
-              data-ajax-complete="OnComplete">
-            @*<form asp-action="CreateStudent" asp-controller="Teacher" method="post" enctype="multipart/form-data" onsubmit="return jQueryAjaxPost(this);" autocomplete="off">*@
-            @*<form asp-action="CreateStudent" asp-controller="Teacher" method="post" enctype="multipart/form-data">*@
-            @Html.AntiForgeryToken()
-            <div class="alert alert-danger alert-dismissible fade hide" id="AlertDanger" role="alert">
-                @TempData["StudentExists"]
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+        <div class="modal-content">
+
+            <!--Modal Header Start-->
+            <div class="modal-header">
+                <h4 class="modal-title">Lägg till Student</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
             </div>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="modal-body form-horizontal" id="studentFormCreate">
-                <div class="form-group row">
-                    <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <input asp-for="FirstName" class="form-control" />
-                        <span asp-validation-for="FirstName" class="text-danger"></span>
+            <!--Modal Header End-->
+
+            <form asp-action="CreateStudent"
+                  asp-controller="Teacher"
+                  id="CreateStudent"
+                  data-ajax="true"
+                  data-ajax-method="post"
+                  data-ajax-success="success"
+                  data-ajax-update="#UsersList"
+                  data-ajax-failure="failure"
+               
+                  >
+                <div class="modal-body form-horizontal" id="studentFormCreate">
+                    <div class="form-group row">
+                        <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="FirstName" class="form-control" id="firstname" />
+                            <span asp-validation-for="FirstName" class="text-danger"></span>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="LastName" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <input asp-for="LastName" class="form-control" />
-                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    <div class="form-group row">
+                        <label asp-for="LastName" class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="LastName" class="form-control" />
+                            <span asp-validation-for="LastName" class="text-danger"></span>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="Email" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                    <div class="form-group row">
+                        <label asp-for="Email" class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="Password" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
+                    @*<div class="form-group row">
+                            <label asp-for="Password" class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <input asp-for="Password" class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                        </div>*@
+                    <div class="form-group row">
+                        <label asp-for="CourseId" class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            <select asp-for="CourseId" asp-items="@await courseSelect.GetCoursesAsync()" class="form-control">
+                                <option selected="selected" value="">Please select</option>
+                            </select>
+                            <span asp-validation-for="CourseId" class="text-danger"></span>
+                        </div>
                     </div>
+                    <!--Modal Footer Start-->
                 </div>
-                <div class="form-group row">
-                    <label asp-for="CourseId" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <select asp-for="CourseId" asp-items="@await courseSelect.GetCoursesAsync()" class="form-control">
-                            <option selected="selected" value="">Please select</option>
-                        </select>
-                        <span asp-validation-for="CourseId" class="text-danger"></span>
-                    </div>
-                </div>
-                @*<div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
-                    </div>*@
-                <!--Modal Footer Start-->
-            </div>
-            <div class="modal-footer">
-                @*<button data-dismiss="modal" id="cancel" class="btn btn-default" type="button">Cancel</button>*@
-                <button class="btn btn-success relative" id="btnSubmit" type="submit">
-                    <i class="loader"></i>
-                    Skicka
-                </button>
-            </div> <!--Modal Footer End-->
-        </form>
+                <div class="modal-footer">
+                    <button data-dismiss="modal" id="cancel" class="btn btn-default" type="button">Cancel</button>
+                    <button class="btn btn-success relative" id="btnSubmit" type="submit">
+                        <i class="loader"></i>
+                        Skicka
+                    </button>
+                </div> <!--Modal Footer End-->
+            </form>
+        </div>
     </div>
 </div>
-@section Scripts{
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-        <script src="~/js/user.js" asp-append-version="true"></script>
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-        @if (@TempData["DisplayModel"] != null)
-        {
-            var modal = @TempData["DisplayModel"].ToString();
-
-            <script>
-                (function () {
-                    $.ajax({
-                        type: "GET",
-                        url: "Teacher/CreateStudent",
-                        success: function (res) {
-                            $('#modal-create-user').find(".modal-dialog").html(res);
-
-                            $("#modal-create-user").modal('show');
-                        }
-                    })
-
-                }(jQuery));
-
-            </script>
-        }
-        <script>
-        @if (@TempData["StudentSuccess"] != null)
-        {
-            @: $('.alert').removeClass('hide');
-            @: $('.alert').addClass('show');
-        }
-        @if (@TempData["StudentExists"] != null)
-        {
-            @: $('.alert').removeClass('hide');
-            @: $('.alert').addClass('show');
-        }
-        </script>
-    }
-}
+}*@
