--- a/LMS-Lexicon/Views/Teacher/DeleteStudent.cshtml
+++ b/LMS-Lexicon/Views/Teacher/DeleteStudent.cshtml
@@ -42,7 +42,7 @@
     <form asp-action="DeleteStudent">
         <input type="hidden" asp-for="@Model.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index"><i class="fas fa-list-alt"></i></a>
     </form>
 </div>
 
