--- a/LMS-Lexicon/Views/Teacher/EditStudent.cshtml
+++ b/LMS-Lexicon/Views/Teacher/EditStudent.cshtml
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><i class="fas fa-list-alt"></i> Tillbaka till listan</a>
 </div>
 
 @section Scripts {
