--- a/LMS-Lexicon/Views/Student/Index.cshtml
+++ b/LMS-Lexicon/Views/Student/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">@Model.FirstName : @Model.Role</h1>
+    <h1 class="display-4">@Model.FirstName : @Model.RoleName</h1>
 </div>
