--- a/LMS-Lexicon/Views/Teacher/EditStudent.cshtml
+++ b/LMS-Lexicon/Views/Teacher/EditStudent.cshtml
@@ -1,11 +1,11 @@
-﻿@model CreateStudentViewModel;
+﻿@model CreateUsersViewModel;
 @inject ICourseSelectService courseSelect
-
-@{
-    ViewData["Title"] = "EditStudent";
+<br/>
+@{ if (Model.Role == "Student")
+    {<h2>Ändra Student</h2>}
+    else
+    { <h2>Ändra Lärare</h2>} 
 }
-
-<h1>Ändra Student</h1>
 
 <hr />
 <div class="row">
@@ -29,28 +29,34 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             @*<div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>*@
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>*@
+            @if (Model.Role == "Student")
+            {
+                <div class="form-group">
+                    <label asp-for="CourseId" class="control-label"></label>
+                    <select asp-for="CourseId" asp-items="@await courseSelect.GetCoursesAsync()" class="form-control">
+                        <option selected="selected" value="">Please select</option>
+                    </select>
+                    <span asp-validation-for="CourseId" class="text-danger"></span>
+                </div>
+                <input asp-for="Role" type="hidden" value="Student" />
+            }
+            else
+            {
+                <input asp-for="CourseId" type="hidden" value="1" />
+                <input asp-for="Role" type="hidden" value="Teacher" />
+            }
+
             <div class="form-group">
-                <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" asp-items="@await courseSelect.GetCoursesAsync()" class="form-control">
-                    <option selected="selected" value="">Please select</option>
-                </select>
-                <span asp-validation-for="CourseId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Edit" class="btn btn-primary" />
+                <input type="submit" value="Ändra" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index"><i class="fas fa-list-alt"></i> Tillbaka till listan</a>
+    <a asp-action="Index" asp-route-role="@Model.Role"><i class="fas fa-list-alt"></i> Tillbaka till listan</a>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
