--- a/LMS-Lexicon/Views/Modules/Index.cshtml
+++ b/LMS-Lexicon/Views/Modules/Index.cshtml
@@ -10,8 +10,7 @@
 @*<p>
     <a asp-action="Create">Skapa Modules</a>
 </p>*@
-
-@*<table class="table">
+<table class="table">
     <thead>
         <tr>
             <th>
