Made add, edit and delete functionality for both student and teacher. Mede a dropdown to choose the list of student or techers. Fixed the names of methods and views. Made the validatiom script to work in a perfect way.

--- a/LMS-Lexicon/Views/Courses/Index.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<br/>
 <h1>Kurser</h1>
 
 <p>
@@ -28,7 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.CourseName)
+                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.CourseName)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
