--- a/LMS-Lexicon/Views/Modules/Edit.cshtml
+++ b/LMS-Lexicon/Views/Modules/Edit.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<br/>
+<h1>Ändra</h1>
 
-<h1>Edit</h1>
-
-<h4>Module</h4>
+<h4>Modul</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
