--- a/LMS-Lexicon/Views/Courses/Edit.cshtml
+++ b/LMS-Lexicon/Views/Courses/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Ändra</h1>
 
-<h4>Course</h4>
+<h4>Kurs</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index2">Tillbaka till listan <i class="fas fa-list-alt"></i></a>
+    <a asp-action="Index">Tillbaka till listan <i class="fas fa-list-alt"></i></a>
     
 </div>
 
