--- a/LMS-Lexicon/Views/Teacher/DeleteUser.cshtml
+++ b/LMS-Lexicon/Views/Teacher/DeleteUser.cshtml
@@ -38,7 +38,7 @@
     </dl>
 </div>
 <div>
-    <form asp-action="DeleteStudent">
+    <form asp-action="DeleteUser">
         <input type="hidden" asp-for="@Model.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index" asp-route-role="@Model.Role"><i class="fas fa-list-alt"></i></a>
