--- a/LMS-Lexicon/Views/Teacher/EditUser.cshtml
+++ b/LMS-Lexicon/Views/Teacher/EditUser.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditStudent">
+        <form asp-action="EditUser">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input type="hidden" asp-for="Id" class="form-control" />
