--- a/LMS-Lexicon/Views/Teacher/Index.cshtml
+++ b/LMS-Lexicon/Views/Teacher/Index.cshtml
@@ -3,26 +3,12 @@
 
 @{
     ViewData["Title"] = "Index";
-    var StudentExists = TempData["StudentExists"];
-    var StudentSuccess = TempData["StudentSuccess"];
+    var UserExists = TempData["UserExists"];
+    var UserSuccess = TempData["UserSuccess"];
 }
 <br />
 <div class="row">
-    @*<div class="col-md-4">
-        @{ if (Model.RoleName == "Student")
-            {
-                <p>
-                    <a asp-action="CreateUser" asp-route-role="Student" class="btn btn-success text-white popup" id="CreateUser" data-ajax="true" data-ajax-method="GET" data-ajax-success="success" data-ajax-update="#addUser" data-ajax-mode="replace"> Lägg till student <i class="fa fa-plus"></i></a>
-                </p>}
-            else
-            {
-                <p>
-                    <a asp-action="CreateUser" asp-route-role="Teacher" class="btn btn-success text-white popup" id="CreateUser" data-ajax="true" data-ajax-method="GET" data-ajax-success="success" data-ajax-update="#addUser" data-ajax-mode="replace"> Lägg till lärare <i class="fa fa-plus"></i></a>
-                </p>
-            }
-        }
-    </div>*@
-    <div class="col-md-4"></div>
+    <div class="col-md-9"></div>
     <div class="col-md-3 px-md-3">
         <form asp-action="GetUsersByRole" class="input-group ml-1" id="RoleForm" data-ajax="true" data-ajax-method="GET" data-ajax-update="#UsersList" data-ajax-mode="replace">
             <select asp-for="RoleId" asp-items="@await rolesSelect.GetUserRolessAsync()" class="form-control form-control form-control-sm">
@@ -30,24 +16,24 @@
             </select>
         </form>
     </div>
-    <div class="col-md-1"></div>
+
 </div>
 <div id="addUser"></div>
 <div id="UsersList">
-    @if (StudentSuccess != null)
+    @if (UserSuccess != null)
     {
         <div class="alert alert-success alert-dismissible fade hide" id="AlertDanger" role="alert">
-            @TempData["StudentSuccess"].ToString()
+            @TempData["UserSuccess"].ToString()
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
     }
-    @if (StudentExists != null)
+    @if (UserExists != null)
     {
         <div class="alert alert-danger alert-dismissible fade hide" id="AlertDanger" role="alert">
-            @TempData["StudentExists"].ToString()
+            @TempData["UserExists"].ToString()
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -58,10 +44,8 @@
 
     <partial name="UsersPartial" model="@Model.UserList" />
 </div>
-@*@section Scripts {
+@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script src="~/js/site.js"></script>
-
-}*@
+}
 
 
