Fixed the Lay-out and some merge problems

--- a/LMS-Lexicon/Views/Courses/Create.cshtml
+++ b/LMS-Lexicon/Views/Courses/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 <br/>
-<h4>Lägg till Kurs</h4>
+<h3>Lägg till Kurs</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><i class="fas fa-list-alt fa-lg"></i></a>
 </div>
 
 @section Scripts {
