--- a/LMS-Lexicon/Views/Courses/Delete.cshtml
+++ b/LMS-Lexicon/Views/Courses/Delete.cshtml
@@ -3,12 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Ta bort</h1>
-
-<h3>Är du säker på att du vill ta bort den här kursen??</h3>
+<br/>
+<h3>Är du säker på att du vill ta bort den här kursen?</h3>
 <div>
-    <h4>Course</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -34,6 +31,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Ta bort" class="btn btn-danger" /> |
-        <a asp-action="Index">Tillbaka till listan</a>
+        <a asp-action="Index"><i class="fas fa-list-alt"></i></a>
     </form>
 </div>
