--- a/LMS-Lexicon/Views/Courses/Edit.cshtml
+++ b/LMS-Lexicon/Views/Courses/Edit.cshtml
@@ -3,10 +3,8 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Ändra</h1>
-
-<h4>Kurs</h4>
+<br/>
+<h3>Ändra kurs</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,14 +27,14 @@
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Ändra" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Tillbaka till listan <i class="fas fa-list-alt"></i></a>
+    <a asp-action="Index"><i class="fas fa-list-alt fa-lg"></i></a>
     
 </div>
 
