--- a/LMS-Lexicon/Views/Teacher/EditUser.cshtml
+++ b/LMS-Lexicon/Views/Teacher/EditUser.cshtml
@@ -50,13 +50,13 @@
                 <input asp-for="Role" type="hidden" value="Teacher" />
             }
 
-            <div class="form-group">
-                <input type="submit" value="Ändra" class="btn btn-primary" />
-            </div>
+        <div class="form-group">
+            <input type="submit" value="Ändra" class="btn btn-primary" />
+        </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-role="@Model.Role"><i class="fas fa-list-alt"></i> Tillbaka till listan</a>
+    <a asp-action="Index" asp-route-role="@Model.Role"><i class="fas fa-list-alt fa-lg"></i></a>
 </div>
