Fixed Tb to be the same as Dev

--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -84,6 +84,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id"><i class="fas fa-edit fa-lg"></i></a> |
-    <a asp-action="Index"><i class="fas fa-list-alt fa-lg"></i></a>
+    <a asp-action="Edit" asp-route-id="@Model.Id"><i class="fas fa-edit"></i></a> |
+    <a asp-action="Index"><i class="fas fa-list-alt"></i></a>
 </div>
