--- a/LMS-Lexicon/Views/Courses/Delete.cshtml
+++ b/LMS-Lexicon/Views/Courses/Delete.cshtml
@@ -31,6 +31,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Ta bort" class="btn btn-danger" /> |
-        <a asp-action="Index"><i class="fas fa-list-alt"></i></a>
+        <a asp-action="Index"><i class="fas fa-list-alt fa-lg"></i></a>
     </form>
 </div>
