--- a/LMS-Lexicon/Views/Courses/EditModule.cshtml
+++ b/LMS-Lexicon/Views/Courses/EditModule.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LMS_Lexicon.Core.Models.Entities.Module
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "EditModule";
 }
 
 <h1>Edit</h1>
@@ -10,9 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="EditModule">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CourseId" />
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -34,20 +33,20 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" class="form-control" asp-items="ViewBag.CourseId"></select>
-                <span asp-validation-for="CourseId" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
-                <input type="submit" value="Edit" class="btn btn-primary" />
+                <label asp-for="CourseId" class="control-label"></label>
+                <select asp-for="CourseId" class="form-control" asp-items="ViewBag.ModuleId"></select>
+                <span asp-validation-for="CourseId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="EditModule" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Module">Back to List</a>
 </div>
 
 @section Scripts {
