--- a/LMS-Lexicon/Views/Courses/Index.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index.cshtml
@@ -39,9 +39,9 @@
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-dark" >Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id " class="btn btn-danger">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Ändra</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-dark" >Detaljer</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id " class="btn btn-danger">Ta bort</a>
             </td>
         </tr>
 }
